# fastapi-movies-full-crud

./: .gitignore
backend/: pyproject.toml  readme.md
backend/app/: dependecies.py  main.py
backend/app/repositories/: movie_repository.py
backend/app/routers/: movies.py
backend/app/schemas/: movie.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/types/: movies-type.ts
frontend/src/components/: billboard-container.tsx  billboard.tsx
frontend/src/components/ui/: color-mode.tsx
frontend/src/components/ui/billboard/: billboard-card.tsx  billboard.tsx  movie-card.tsx
frontend/src/components/ui/navbar/: create-movie-modal.tsx  navbar.tsx
