[project]
name = "movie-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Cesar Gonzalez",email = "cesargonzalez390@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "black (>=25.1.0,<26.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

